--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: wu-kan # 站点标题
+title: mxp # 站点标题
 description: | # 头像背后的信息（html格式），<br/>代表换行
-  SYSU超算17级在读<br/>
+  在线修电脑的<br/>
   永远喜欢水野爱<br/>
   田宫例四驱车<br/>
   ASC<br/>
@@ -28,7 +28,7 @@ description: | # 头像背后的信息（html格式），<br/>代表换行
     marginwidth="0"
     marginheight="0"
   ></iframe>
-url: https://wu-kan.cn # 你的域名，例如 https://wu-kan.github.io
+url: https://mxpsept.github.io # 你的域名，例如 https://wu-kan.github.io
 baseurl: "" # 假如你的博客是建在某个目录下的，请在这里加上目录名，并且下面配置的所有链接里的`/assets`前也要加，即`/your_baseurl/assets`。这一项结尾不要有'/'。
 
 defaults: # 将所有配置选项使用<https://jekyllrb.com/docs/configuration/front-matter-defaults/>功能进行配置
@@ -551,8 +551,8 @@ defaults: # 将所有配置选项使用<https://jekyllrb.com/docs/configuration/
               onload='
                 new Valine({
                   "el": document.getElementsByClassName("v")[0],
-                  "appId": "9hABRddSuEkTgqLrt1VSK5B1-gzGzoHsz",
-                  "appKey": "NJ7RwmgrxsF7KDzlqU7YewlL",
+                  "appId": "PD5DRtsOFJx23GTlHiP3DaU0-gzGzoHsz",
+                  "appKey": "TRkxuG7vXjus4Kr9gF00bul5",
                   "placeholder": "在这里评论吧！填写邮箱可以获得 Gravatar 头像和回复通知哦",
                   "requiredFields": ["nick","mail"],
                   "visitor": true,
@@ -583,7 +583,7 @@ defaults: # 将所有配置选项使用<https://jekyllrb.com/docs/configuration/
             | # 我的文章使用最宽松的知识共享协议：署名 4.0 国际 (CC BY 4.0)。您可以自由地：共享 — 在任何媒介以任何形式复制、发行本作品；演绎 — 修改、转换或以本作品为基础进行创作；在任何用途下，甚至商业目的。只要你遵守许可协议条款，许可人就无法收回你的这些权利。惟须遵守下列条件：署名 — 您必须给出适当的署名，提供指向本许可协议的链接，同时标明是否（对原始作品）作了修改。您可以用任何合理的方式来署名，但是不得以任何方式暗示许可人为您或您的使用背书。
             <br/>
             <i class="fas fa-coffee fa-fw"></i>
-            <a href="/merger/">如果这篇博客帮助到你，可以请我喝一杯咖啡~</a>
+            <a href="/merger/">如果这篇博客帮助到你，可以请我喝一杯长岛冰茶~</a>
             <br/>
             <i class="fab fa-creative-commons-by fa-fw"></i>
             <a
@@ -613,16 +613,17 @@ defaults: # 将所有配置选项使用<https://jekyllrb.com/docs/configuration/
             - | # 需要配置的变量见<https://merger.justhx.com/cn/docs/configure>
               <script>
                 var usage = "payment";
-                var wechat = "wxp://f2f0BhUoIC_9gex7-tC2PRvVuoA486mK5WyC";
-                var tenpay = "https://i.qianbao.qq.com/wallet/sqrcode.htm?m=tenpay&f=wallet&a=1&ac=CAEQ77zFwQMY-6u57gU%3D_xxx_sign&u=942759535&n=%E8%94%9A";
-                var alipay = "https://qr.alipay.com/fkx02750b5kbplxvudqrx16";
-                var paypal = "https://paypal.me/wukan0621";
-                var myname = "WuK";
-                var profile = "https://gravatar.loli.net/avatar/289efba375d63424de3c49569c446744?s=320";
+                var wechat = "wxp://f2f0zNdJMD8xt217TDkWwPoA2CwTUdaB2ae0";
+                var tenpay = "https://i.qianbao.qq.com/wallet/sqrcode.htm?m=tenpay&a=1&u=1072964094&ac=CAEQ_sPQ_wMY9Ymq-AU%3D_xxx_sign&n=%E7%81%AB%E7%83%88%E9%B8%9F&f=wallet";
+                var alipay = "HTTPS://QR.ALIPAY.COM/FKX07670RKTMU5LACBE4F1";
+                var paypal = "https://paypal.me/mxp0102";
+                var myname = "mxp";
+#                var profile = "https://gravatar.loli.net/avatar/289efba375d63424de3c49569c446744?s=320";
+                var profile = "https://i.loli.net/2020/07/12/7zW6m4gJeAPTpZL.jpg";
                 var multilingual = true;
-                var myname_hans = "吴坎";
-                var myname_hant = "吴坎";
-                var myname_eng = "WuK";
+                var myname_hans = "马旭鹏";
+                var myname_hant = "马旭鹏";
+                var myname_eng = "mxp";
                 var title = "选择你的支付方式";
                 var subtitle = "跟随进一步的指示以向" + myname + "付款";
                 var qrcodeapi = "https://www.zhihu.com/qrcode?url=";
